applications/kubernetes/media/cleanuparr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cleanuparr
  namespace: media 
spec:
  ports:
  - name: web
    port: 11011
  selector:
    app: cleanuparr
