applications/kubernetes/media/cleanuparr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cleanuparr-ingressroute
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`cleanuparr.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: cleanuparr
      port: 11011
  tls:
    secretName: cleanuparr-certificate-secret
